--- a/src/CefWpfClient/MainWindow.xaml
+++ b/src/CefWpfClient/MainWindow.xaml
@@ -12,7 +12,7 @@
         Height="350"
         Width="525"
         d:DataContext="{d:DesignInstance ViewModels1:WebBrowserViewModel}">
-    <!-- Content of Browser is generated in behind code -->
+    <!-- Events are bound to the ViewModel in code behind -->
     <CefWpf:ChromiumWebBrowser 
                                IsBrowserInitializedChanged="OnBrowserInitialized"
                                LoadingStateChanged="OnFrameLoadEnd"
