--- a/src/CefWpfClient/MainWindow.xaml
+++ b/src/CefWpfClient/MainWindow.xaml
@@ -11,7 +11,7 @@
         Width="1000"
         d:DataContext="{d:DesignInstance ViewModels1:WebBrowserViewModel}">
     <!-- Events are bound to the ViewModel in code behind -->
-    <CefWpf:ChromiumWebBrowser x:Name="Browser"
+    <CefWpf:ChromiumWebBrowser Address=""
                                IsBrowserInitializedChanged="OnBrowserInitialized"
                                LoadingStateChanged="OnLoadingStateChanged"
                                LoadError="OnLoadError"
